--- a/ui/templates/ui/manage_reference.html
+++ b/ui/templates/ui/manage_reference.html
@@ -9,6 +9,7 @@
         <div class="form-group">
             <label class="control-label" for="name">Reference Name</label>
             <input type="text" class="form-control" id="name" name="name" required />
+            <p class="help-block">Recommended format: <em>NAME_VERSION_FORMAT</em>, for example, GENOME_HG38_FA.</p>
         </div>
         <div class="form-group">
             <label class="control-label" for="path">Reference Value</label>
