Add support for LSF
V298

--- a/ui/templates/ui/index.html
+++ b/ui/templates/ui/index.html
@@ -71,7 +71,7 @@
 		    </a>
 		</div>
 		<div class="metro-nav-block nav-block-red" style="margin-right: 0;">
-		    <a data-original-title="" href="//open.bioqueue.org">
+		    <a data-original-title="" href="http://bioqueue.nefu.edu.cn">
 		        <i class="icon-bar-chart"></i>
 		        <div class="status">Open Platform</div>
 		    </a>
