Install tool module (alpha-4)

--- a/ui/templates/ui/query_job.html
+++ b/ui/templates/ui/query_job.html
@@ -149,7 +149,7 @@
 					message: data.info,
 					showCloseButton: true
 				});
-                self.parent().parent().parent().hide("slow");
+                self.parent().parent().parent().parent().hide("slow");
 		    }else{
                 Messenger().post({
 					message: data.info,
