--- a/ui/static/ui/css/site.css
+++ b/ui/static/ui/css/site.css
@@ -826,6 +826,7 @@ tr.pending-user:hover span.user-actions, tr.list-users:hover td div.btn-group, t
 	cursor:pointer;
 	margin-top: 6px;
 }
-#rtable td{
+#rtable td, .modal-body{
 	word-break: break-all;
+	word-wrap: break-word;
 }
